--- a/Website/index.html
+++ b/Website/index.html
@@ -13,6 +13,7 @@
    <link rel="stylesheet" href="static/css/style.css">
 </head>
  
+<!--Navigation bar-->
 <body class="siteScrolled" data-new-gr-c-s-check-loaded="14.983.0">
     <div class="wrapper">
         <nav class="navbar-expand-lg">
@@ -20,9 +21,11 @@
  
         </nav>
     </div>
-    <div class="jumbotron">
-        <h1>Search Canada's Home of Property</h1>
- 
+    <!--Jumbotron-->
+    <div class="jumbotron jumbotron-fluid">
+        <h1 class="display-4">Search Canada's Home of Property</h1>
+        <p class="lead"  style="text-align:center">Predict sales prices and practice feature engineering, RFs, and gradient boosting</p>
+
         <div class="row">
         <div class="col-md-3">
  
