--- a/Website/index.html
+++ b/Website/index.html
@@ -16,15 +16,40 @@
 <!--Navigation bar-->
 <body class="siteScrolled" data-new-gr-c-s-check-loaded="14.983.0">
     <div class="wrapper">
-        <nav class="navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">House Prices Prediction</a>
- 
+        <nav class="navbar navbar-expand-lg navbar-light" id="navMain">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent" drop-menu-right>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link text-blue" href="index.html">
+                            Home 
+                            <span class="sr-only"(current)></span>
+                        </a>
+                    </li>
+                    <li class="nav-item dropdownB">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dashboards
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="right:auto; left: auto;">
+                           <a class="dropdown-item" href="Hpp/dashboard1.html">Correlation</a>
+                           <a class="dropdown-item" href="Hpp/dashboard2.html">Distribution></a>
+                    </div>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link">Machine Learning</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="https://github.com/yajingran/group_2_final_project">
+                        Github Repository</a>
+                    </li>
+                </ul>
+            <div class="navbar-brand" href="index.html">House Prices Prediction</a>
+            </div>
         </nav>
     </div>
     <!--Jumbotron-->
     <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-4">Search Canada's Home of Property</h1>
-        <p class="lead"  style="text-align:center">Predict sales prices and practice feature engineering, RFs, and gradient boosting</p>
+        <h1 class="display-4"><b>Canada's Home of Property</b></h1>
+        <p class="lead"  style="text-align:center"><b>Predict sales prices and practice feature engineering, RFs, and gradient boosting</b></p>
 
         <div class="row">
         <div class="col-md-3">
@@ -32,6 +57,7 @@
         <div class="home-page-search-container border-radius-all">
             <div id="autocompleteSearchBar">
                 <div class="search-container-input home">
+                    <p style="font-size:40px;">Filter Search</p>
                     <span class="fa fa-search searchInputIcon"></span>
                     <input id="searchAutocomplete" name="search" placeholder="Enter House Style">
                     <input id="searchAutocomplete" name="search" placeholder="Enter Year Built">
@@ -41,6 +67,7 @@
                     <input id="searchAutocomplete" name="search" placeholder="Enter Garage Area">
                     <span class="fa fa-times-circle-o searchClear" style="display:none;"></span>
                 </div>
+                <button id="filter-btn" type="submit" class="btn btn-default">Filter Table</button>
             </div>
         </div>
     </div>
