--- a/dashboards/dashboard1.html
+++ b/dashboards/dashboard1.html
@@ -21,6 +21,39 @@
       }
     </style>
   </head>
+<!--Navigation bar-->
+<body class="siteScrolled" data-new-gr-c-s-check-loaded="14.983.0">
+  <div class="wrapper">
+      <nav class="navbar navbar-expand-lg navbar-light" id="navMain">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent" drop-menu-right>
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                      <a class="nav-link text-blue" href="index.html">
+                          Home 
+                          <span class="sr-only"(current)></span>
+                      </a>
+                  </li>
+                  <li class="nav-item active">
+                      <a class="nav-link" href="#">
+                          Dashboards
+                      </a>                       
+                  </li>
+                  <li class="nav-item active">
+                      <a class="nav-link" href="#">
+                          Machine Learning
+                      </a>
+                  </li>
+                  <li class="nav-item active">
+                      <a class="nav-link" href="https://github.com/yajingran/group_2_final_project">
+                      Github Repository</a>
+                  </li>
+              </ul>
+          <div class="navbar-brand" href="index.html">House Prices Prediction</a>
+          </div>
+      </nav>
+  </div>
+
+
   <script>
       //     $("#mouse").delay(1000).animate({"opacity": "1"}, 700);
       //     $(document ).ready(function() {
