--- a/dashboards/dashboard1.html
+++ b/dashboards/dashboard1.html
@@ -28,17 +28,17 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent" drop-menu-right>
               <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                      <a class="nav-link text-blue" href="index.html">
+                      <a class="nav-link text-blue" href="https://yajingran.github.io/group_2_final_project/dashboards/index.html">
                           Home 
                       </a>
                   </li>
                   <li class="nav-item active">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard1.html">
                           Dashboards
                       </a>                       
                   </li>
                   <li class="nav-item active">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/ml.html">
                           Machine Learning
                       </a>
                   </li>
@@ -65,7 +65,6 @@
     
 <!-- end of page container -->
 </div>
-<script src="js/script.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
