--- a/dashboards/ml.html
+++ b/dashboards/ml.html
@@ -33,12 +33,12 @@
                       </a>
                   </li>
                   <li class="nav-item active">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard1.html">
                           Dashboards
                       </a>                       
                   </li>
                   <li class="nav-item active">
-                      <a class="nav-link" href="#">
+                      <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/ml.html">
                           Machine Learning
                       </a>
                   </li>
