--- a/dashboards/dashboard1.html
+++ b/dashboards/dashboard1.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent" drop-menu-right>
               <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                      <a class="nav-link text-blue" href="https://yajingran.github.io/group_2_final_project/dashboards/index.html">
+                      <a class="nav-link text-blue" href="https://yajingran.github.io/group_2_final_project/index.html">
                           Home 
                       </a>
                   </li>
@@ -47,7 +47,7 @@
                       Github Repository</a>
                   </li>
               </ul>
-          <div class="navbar-brand" href="index.html">House Prices Prediction</a>
+          <div class="navbar-brand" href="https://yajingran.github.io/group_2_final_project/index.html">House Prices Prediction</a>
           </div>
       </nav>
   </div>
