--- a/dashboards/dashboard1.html
+++ b/dashboards/dashboard1.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent" drop-menu-right>
               <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                      <a class="nav-link text-blue" href="https://yajingran.github.io/group_2_final_project/templates/index.html">
+                      <a class="nav-link text-blue" href="http://127.0.0.1:5000">
                           Home 
                       </a>
                   </li>
