--- a/dashboards/ml.html
+++ b/dashboards/ml.html
@@ -53,6 +53,24 @@
   </div>
 
 
+
+  <div class="jumbotron">
+    <h1 class="display-4">Machine Learning</h1>
+</div>
+<!-- Add rows, resize as needed -->
+<div class="container-fluid">
+   <div class="row">
+<!--  Add columns -->
+      <div class="col-md-4">
+    <h3>Goals: Create a model to predict house price in Ames, IA</h3>
+    <h3>Technique Used: Multiple Linear Regression</h3>
+    <h3>Tools Used: Python (Pandas, Scikit-Learn, Matplotlib, Seaborn), Tableaus, Javascript, CSS, HTML</h3>
+</div>
+
+
+
+
+
   <script>
       //     $("#mouse").delay(1000).animate({"opacity": "1"}, 700);
       //     $(document ).ready(function() {
