--- a/dashboards/ml.html
+++ b/dashboards/ml.html
@@ -62,9 +62,9 @@
    <div class="row">
 <!--  Add columns -->
       <div class="col-md-4">
-    <h3>Goals: Create a model to predict house price in Ames, IA</h3>
-    <h3>Technique Used: Multiple Linear Regression</h3>
-    <h3>Tools Used: Python (Pandas, Scikit-Learn, Matplotlib, Seaborn), Tableaus, Javascript, CSS, HTML</h3>
+    <h3>Goals: <small>Create a model to predict house price in Ames, IA</small></h3>
+    <h3>Technique Used: <small>Multiple Linear Regression</small></h3>
+    <h3>Tools Used: <small>Python (Pandas, Scikit-Learn, Matplotlib, Seaborn), Tableaus, Javascript, CSS, HTML</small></h3>
 </div>
 
 
