--- a/dashboards/ml.html
+++ b/dashboards/ml.html
@@ -38,19 +38,19 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="images/blue.jpg" class="d-block w-100" alt="...">
+        <img src="../images/blue.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h1>Machine Learning</h1>
         </div>
     </div>
     <div class="carousel-item">
-      <img src="images/blue.jpg" class="d-block w-100" alt="...">
+      <img src="../images/blue.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
           <h1>Machine Learning</h1>
         </div>
     </div>
     <div class="carousel-item">
-      <img src="images/blue.jpg" class="d-block w-100" alt="...">
+      <img src="../images/blue.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
           <h1>Machine Learning</h1>
         </div>
