--- a/dashboards/ml.html
+++ b/dashboards/ml.html
@@ -90,17 +90,17 @@
   <div class="container">
     <h1>Step 2: Data Cleaning Feature Selection </h1>
     <p>We started off by checking the missing value ratio and drop those columns with more than 20% of missing data.</p>
-    <img src="images/1.jpg">
-    <img src="images/2.jpg">
+    <img src="../images/1.jpg">
+    <img src="../images/2.jpg">
     <p>Since our target users are residential users, we decided to only include residential properties.</p>
-    <img src="images/3.jpg">
+    <img src="../images/3.jpg">
     <p>For columns that have missing values, we either replace them with mode, median, or 0.</p>
-    <img src="images/4.jpg">
+    <img src="../images/4.jpg">
     <p>For practical reasons, we created an additional column: “total_area” to combine similar categories such as total basement square footage, 1st-floor square footage and etc. </p>
-    <img src="images/5.jpg">
+    <img src="../images/5.jpg">
     <p>For simplicity reason, we divided our data into 2 categories only: categorical and numerical. Since we have 81 features, it seems more practical to select only the most relevant ones for our final model. Using heatmap from seaborn module, we were able to identify numerical variables that are highly correlated with the target: sale price. We can also order the variables based on the degree of correlation with sale price. </p>
-    <img src="images/6.jpg">
-    <img src="images/7.jpg">
+    <img src="../images/6.jpg">
+    <img src="../images/7.jpg">
   </div>
 </section>
 
@@ -115,7 +115,7 @@
   <div class="container">
     <h1>Step 4: Cleaned Data Export to Database</h1>
     <p>Cleaned dataset was then exported as csv file to database</p>
-    <img src="images/8.jpg">
+    <img src="../images/8.jpg">
   </div>
 </section>
 
@@ -123,7 +123,7 @@
   <div class="container">
     <h1>Step 5: Connecting to AWS Database</h1>
     <p>As required, we connected to our AWS database using the below code and import out cleaned dataset for building the machine learning model:</p>
-    <img src="images/9.jpg">
+    <img src="../images/9.jpg">
   </div>
 </section>
 
@@ -131,7 +131,7 @@
   <div class="container">
     <h1>Step 5: Data Manipulation</h1>
     <p>Label Encoding can be achieved using Sklearn library. LabelEncoder converts categorical variables to numeric values. </p>
-    <img src="images/10.jpg">
+    <img src="../images/10.jpg">
   </div>
 </section>
 
@@ -161,7 +161,7 @@
     <p>After trials and errors, we decided to use Multiple Linear Regression because it gave a comparable result as Deep Learning Model while having a more consistent result with significantly faster runtime.</p>
 
     <p>The equation for Multiple Linear Regression is as follow:</p>
-    <img src="images/11.jpg">
+    <img src="../images/11.jpg">
     <p>Where, for i = n observations:</p>
     <p class="blues">Yi = dependent variable/target</p>
     <p class="blues">β0 = y-intercept</p>
@@ -171,49 +171,49 @@
     <p>We used sklearn's LinearRegression() method to run our multiple linear regression. It will give us the best fit line for the data it receives which gives the best predictions overall for the training data; which minimizes loss between the line and the target values </p>
     <p>The standard loss function used in linear regression is mean squared error(MSE). The mean squared error indicates how close a regression line is to a set of points. It does this by taking the distances from the points to the regression line (these distances are the “errors”) and squaring them. The smaller the mean squared error, the closer we are to finding the line of best fit.</p>
     <p>The image below illustrates a line of best fit for a single feature variable, using the MSE</p>
-    <img src="images/12.jpg">
+    <img src="../images/12.jpg">
     <p>Besides from looking at the MSE, we also evaluate the performance of our model by checking the R2 Score. The R2 score ranges from 0 to 1, and can be thought of as the percentage of variation in the data that is explained by the predictive power of the model. The higher the score, the better the performance. 0% indicates that the model explains none of the variability of the response data around its mean, 100% indicates that the model explains all the variability of the response data around its mean. In our model. We tested the performance of our model by iterating different numbers of features to the model. Our goal is to have a decent R2 score while using the most practical number of features we can later put on our website for users to choose from.</p>
 
     <h2>Import packages</h2>
-    <img src="images/13.jpg">
+    <img src="../images/13.jpg">
 
     <h2>Separate the target and features variables</h2>
     <p>Feature selection can be an important part of model selection. In supervised learning, including features in a model which do not provide information on the label is useless at best and may prevent generalization at worst. As a result, we excluded “ames_order” and “pid”. </p>
-    <img src="images/14.jpg">
+    <img src="../images/14.jpg">
 
     <h2>Splitting dataset into training and testing sets (80/20 split)</h2>
     <p>This process is to make sure that our model won’t overfit to particular data in that set and should generalize well to new data. If we simply train on the entire training data set, then our model will likely become overfit to the particular data in that set, such that it may actually be worse at predicting the sale price for new houses. </p>
-    <img src="images/15.jpg">
+    <img src="../images/15.jpg">
 
     <h2>Processing training and testing sets using StandardScaler and taking log</h2>
     <p>StandardScaler standardizes our feature variables by subtracting the mean and then scaling to unit variance. Unit variance means dividing all the values by the standard deviation. Standardization of a dataset is a common requirement for many machine learning estimators: they might behave badly if the individual features do not more or less look like standard normally distributed data. We chose to take a log of our target variable to normalize the data because it is easier to convert them back than using StanadardScaler in order to compare the original sale price and predicted sale price.</p>
-    <img src="images/16.jpg">
+    <img src="../images/16.jpg">
 
     <h2>Reshape the y values, define the model and time the model</h2>
-    <img src="images/17.jpg">
+    <img src="../images/17.jpg">
 
     <h2>Fit the model and run prediction on test set</h2>
-    <img src="images/18.jpg">
+    <img src="../images/18.jpg">
 
     <h2>Print the coefficients, intercept, MSE, R2 and model runtime</h2>
     <p>we got 86% by using 8 features in our model("neighborhood","total_area","overallqual", "garagecars","fullbath","yearbuilt","yearremodadd","yrsold") which indicate if the user input information for the selected 8 features, we should have 86% of predicting the accurate house price. </p>
     <h3>Formula for our multiple linear regression model</h3>
     <p>y = -2.67021895e-16 + 0.03896429neighborhood + 0.60886396total_area + 0.13411633overallqual + 0.08067865garagecars + (-0.07035814fullbath) + 0.16385461yearbuilt +0.12970701yearremodadd +(-0.01437204yrsold)</p>
-    <img src="images/19.jpg">
+    <img src="../images/19.jpg">
 
     <h2>Plot Predictions against Actual Values</h2>
     <p>We plotted our predicted sale price against the actual sale price to see how the model performs. In a perfect mode with R2 score of 1, predicted value would equal actual value so there would be a straight diagonal line(x=y). As we can see from the below graph, our predicted prices are mostly scattered close to the straight diagonal line with few outliers. </p>
-    <img src="images/20.jpg">
+    <img src="../images/20.jpg">
 
     <h2>Multiple Linear Regression VS Deep Learning Model Summary</h2>
     <p>After trials and errors, we decided to use Multiple Linear Regression because it gave a comparable result as Deep Learning Model while having a more consistent result with significantly faster runtime.</p>
-    <img src="images/21.jpg">
+    <img src="../images/21.jpg">
 
     <h2>Runtime Comparison</h2>
-    <img src="images/22.jpg">
+    <img src="../images/22.jpg">
 
     <h2>R2 Comparison</h2>
-    <img src="images/23.jpg">
+    <img src="../images/23.jpg">
 
     <h2>Future Improvement:</h2>
     <ul>
