--- a/dashboards/ml.html
+++ b/dashboards/ml.html
@@ -17,7 +17,7 @@
 
   <!-- ======= Header ======= -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="#">Machine Learning</a>
+  <a class="navbar-brand" href="http://127.0.0.1:5000">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
