--- a/dashboards/dashboard1.html
+++ b/dashboards/dashboard1.html
@@ -22,36 +22,37 @@
     </style>
   </head>
 <!--Navigation bar-->
+<!--Navigation bar-->
 <body class="siteScrolled" data-new-gr-c-s-check-loaded="14.983.0">
   <div class="wrapper">
       <nav class="navbar navbar-expand-lg navbar-light" id="navMain">
           <div class="collapse navbar-collapse" id="navbarSupportedContent" drop-menu-right>
+              <a class="navbar-brand" href="#">House Prices Prediction</a>
               <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
                       <a class="nav-link text-blue" href="http://127.0.0.1:5000">
                           Home 
                       </a>
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                       <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/dashboard1.html">
                           Dashboards
                       </a>                       
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                       <a class="nav-link" href="https://yajingran.github.io/group_2_final_project/dashboards/ml.html">
                           Machine Learning
                       </a>
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                       <a class="nav-link" href="https://github.com/yajingran/group_2_final_project">
                       Github Repository</a>
                   </li>
               </ul>
-          <div class="navbar-brand" href="https://yajingran.github.io/group_2_final_project/index.html">House Prices Prediction</a>
+
           </div>
       </nav>
   </div>
-
 
   <script>
       //     $("#mouse").delay(1000).animate({"opacity": "1"}, 700);
