--- a/dashboards/dashboard1.html
+++ b/dashboards/dashboard1.html
@@ -21,7 +21,7 @@
       }
     </style>
   </head>
-<!--Navigation bar-->
+
 <!--Navigation bar-->
 <body class="siteScrolled" data-new-gr-c-s-check-loaded="14.983.0">
   <div class="wrapper">
@@ -54,12 +54,35 @@
       </nav>
   </div>
 
-  <script>
-      //     $("#mouse").delay(1000).animate({"opacity": "1"}, 700);
-      //     $(document ).ready(function() {
-      //   $("body").removeClass("preload");
-      // });
-  </script>
+  <section class="slider">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+          <img src="../images/blue.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>Tableau Dashboards</h1>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/blue.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h1>Tableau Dashboards</h1>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/blue.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h1>Tableau Dashboards</h1>
+          </div>
+      </div>
+    </div>
+  </div>
+  </section>
+
+
+
+
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" id="navMenu"></nav>
     
