--- a/dashboards/dashboard1.html
+++ b/dashboards/dashboard1.html
@@ -1,33 +1,25 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Ames's Home of Property</title>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/style3.css"> 
-    <style>
-      html, body { 
-        /* height: 100%; */
-        }
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  
+    <link rel="stylesheet" href="../static/css/style3.css">
 
-      img{
-        height: 6em;
-        
-        margin-left: 3em;
-      }
-    </style>
-  </head>
+    <title>Tableau Dashboards</title>
+</head>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 <!--Navigation bar-->
 <body class="siteScrolled" data-new-gr-c-s-check-loaded="14.983.0">
   <div class="wrapper">
       <nav class="navbar navbar-expand-lg navbar-light" id="navMain">
           <div class="collapse navbar-collapse" id="navbarSupportedContent" drop-menu-right>
-              <a class="navbar-brand" href="#">House Prices Prediction</a>
+              <a class="navbar-brand" href="http://127.0.0.1:5000">House Prices Prediction</a>
               <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
                       <a class="nav-link text-blue" href="http://127.0.0.1:5000">
